# medical-ai-agent

./: .env.example  .env.production  .env.sample  .env.test  Dockerfile  GITHUB_INTEGRATION.md  INTEGRATION_NOTES.md  README.md  README_ENVIRONMENT.md  README_FIREBASE.md  README_MedicalAgent.md  USAGE_GUIDE.md  add_cse_id.py  agent.py  analyze_and_fix.py  client.py  client_production.py  deploy_to_github.py  docker-compose.yml  fix_indentation.py  fix_logging.py  fix_project.py  fix_project_logging.py  fix_python312_compatibility.py  fix_quotes.py  fix_simple_quotes.py  initialize_firebase.py  initialize_postgres.py  pyproject.toml  requirements.txt  requirements_312.txt  routes.ts  run_medical_ai_server.py  run_server.py  run_server_production.py  run_server_py312.py  setup_cse.py  simple_server.py  system_architecture.md  test_agent.py  (+3 more)
.github/workflows/: ci.yml
components/: ecg_analyzer.py
data/: pipeline.py
db/: firebase_config.py  firebase_db.py  firebase_storage.py  postgres_config.py  postgres_db.py  postgres_models.py  schema.sql
evaluation/: medical_evaluator.py
fastapi_app/: main.py
models/: ensemble.py
prompts/: medical_prompts.py
rag/: __init__.py  base_retriever.py  firebase_retriever.py  mock_retriever.py  pgvector_retriever.py  postgres_retriever.py  web_retriever.py
src/: __init__.py
src/medical_agent/: __init__.py  __main__.py  agents.py  hf_client.py  prompts.py  retriever.py  schemas.py  tools.py
tests/: test_web_retriever.py  test_web_scraper.py  test_web_search.py
ui/: README.md  app.py  run_ui.py  simple_server.py
ui/static/: app.js  styles.css
ui/templates/: index.html
utils/: web_scraper.py  web_search.py
